[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "moneyforward-invoice-api"
version = "0.1.0"
[dependencies]
log = "0.3.8"
reqwest = "0.7.3"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dev-dependencies]
env_logger = "0.4.3"
native-tls = "0.1.4"
oauth2 = "1.1.2"
url = "1.5.1"
